test: 단위/통합테스트 환경 설정 및 테스트 작성
- 통합테스트용 Testcontainers 설정
- application-test.yml 적용
- WebMvcTest 추가
- Jacoco 버전 이슈 해결
- Order 엔티티 이슈 해결: @GenerateValue 추가, 정적팩토리메서드 추가